<resources>
    <string name="app_name">Vision</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="business_name">Vision Beauty Academy &amp; Makeup Studio</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="front_page">Front Page</string>
    <string name="service_name">Service Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="booking">Booking</string>
</resources>