<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:background="@color/onyx"
    >

    <TextView
        android:id="@+id/service_name"
        style="@style/recyclerText"
        android:layout_weight="1.5"
        android:background="@color/light_gold"
        android:text="@string/service_name"/>

    <TextView
        android:id="@+id/description"
        style="@style/recyclerText"
        android:layout_weight="3"
        android:background="@color/medium_gold"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/service_price"
        style="@style/recyclerText"
        android:layout_weight="1"
        android:background="@color/dark_gold"
        android:text="@string/price"/>

</LinearLayout>