<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/onyx"
    tools:context=".UI.AddServices.AddServices">


    <TextView
        android:id="@+id/add_service"
        style="@style/headingOne"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="554dp"
        android:text="Add Service" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/inputLayout"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="450dp"
        android:background="@drawable/text_background">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_serviceName"
            style="@style/inputField"
            android:hint="Service Name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/inputLayout"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/text_background">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_price"
            style="@style/inputField"
            android:hint="@string/price" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/inputLayout"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="315dp"
        android:background="@drawable/text_background">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_description"
            style="@style/inputField"
            android:hint="@string/description" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="135dp"
        android:text="@string/save"
        style="@style/mainButton"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="135dp"
        android:text="@string/cancel"
        style="@style/mainButton"/>

</RelativeLayout>