<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RegisterUser.RegisterUserActivity"
    android:background="@color/onyx">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="131dp"
            android:src="@drawable/vision_logo" />

        <TextView
            android:id="@+id/header"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="500dp"
            android:text="Create Account"
            style="@style/headingOne" />


        <TextView
            android:id="@+id/name"
            style="@style/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="272dp"
            android:layout_marginBottom="450dp"
            android:text="Full Name" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:background="@drawable/text_background"
            app:hintEnabled="false"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="445dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                style="@style/inputField" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/address"
            style="@style/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="267dp"
            android:layout_marginBottom="400dp"
            android:text="@string/address" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="390dp"
            android:background="@drawable/text_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_address"
                style="@style/inputField"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/phone_number"
            style="@style/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="267dp"
            android:layout_marginBottom="350dp"
            android:text="@string/phone_number" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="345dp"
            android:background="@drawable/text_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_phoneNumber"
                style="@style/inputField" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/email_address"
            style="@style/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="268dp"
            android:layout_marginBottom="300dp"
            android:text="@string/email_address" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="290dp"
            android:background="@drawable/text_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                style="@style/inputField"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/password"
            style="@style/text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="270dp"
            android:layout_marginBottom="240dp"
            android:text="@string/password" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="235dp"
            android:background="@drawable/text_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                style="@style/inputField"/>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/button_save"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="100dp"
            style="@style/mainButton"
            android:text="@string/save" />


        <Button
            android:id="@+id/button_cancel"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="100dp"
            android:text="@string/cancel"
            style="@style/mainButton" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>